[gd_scene load_steps=4 format=3 uid="uid://c5jsjshx2x220"]

[ext_resource type="Script" path="res://libs/gui/interfaces/plugin_manager_gui/plugin_manager_gui.gd" id="1_y8fcn"]
[ext_resource type="PackedScene" path="res://libs/gui/interfaces/plugin_manager_gui/modules/code_preview/code_preview.tscn" id="2_hev7f"]
[ext_resource type="Font" uid="uid://dc2n125nfhi84" path="res://libs/gui/resources/font/lower_font.tres" id="2_kkbno"]

[node name="PluginManagerGui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_y8fcn")

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.113725, 0.133333, 0.160784, 1)
metadata/_edit_layout_mode = 1

[node name="HSplitContainer" type="HSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
split_offset = 200
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = true

[node name="PluginListContainer" type="VBoxContainer" parent="HSplitContainer"]
offset_right = 320.0
offset_bottom = 580.0
theme_override_constants/separation = 8

[node name="RefreshButton" type="Button" parent="HSplitContainer/PluginListContainer"]
offset_right = 320.0
offset_bottom = 30.0
text = "刷新插件列表"

[node name="FolderButton" type="Button" parent="HSplitContainer/PluginListContainer"]
offset_top = 38.0
offset_right = 320.0
offset_bottom = 68.0
text = "打开插件文件夹"

[node name="PluginList" type="ItemList" parent="HSplitContainer/PluginListContainer"]
offset_top = 76.0
offset_right = 320.0
offset_bottom = 466.0
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_edit_layout_mode = 1

[node name="CreatePlugin" type="HBoxContainer" parent="HSplitContainer/PluginListContainer"]
offset_top = 474.0
offset_right = 320.0
offset_bottom = 504.0

[node name="CreatePluginFile" type="LineEdit" parent="HSplitContainer/PluginListContainer/CreatePlugin"]
offset_right = 244.0
offset_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_kkbno")
placeholder_text = "插件文件名(如abc.gd)"

[node name="CreatePluginButton" type="Button" parent="HSplitContainer/PluginListContainer/CreatePlugin"]
offset_left = 248.0
offset_right = 320.0
offset_bottom = 30.0
disabled = true
text = "新建插件"

[node name="ReloadAllButton" type="Button" parent="HSplitContainer/PluginListContainer"]
offset_top = 512.0
offset_right = 320.0
offset_bottom = 542.0
text = "重载所有插件"

[node name="UnloadAllButton" type="Button" parent="HSplitContainer/PluginListContainer"]
offset_top = 550.0
offset_right = 320.0
offset_bottom = 580.0
text = "卸载所有插件
"

[node name="TabContainer" type="TabContainer" parent="HSplitContainer"]
offset_left = 332.0
offset_right = 1004.0
offset_bottom = 580.0

[node name="PluginInfoPanel" type="VBoxContainer" parent="HSplitContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 30.0
theme_override_constants/separation = 10

[node name="PluginName" type="Label" parent="HSplitContainer/TabContainer/PluginInfoPanel"]
offset_right = 672.0
offset_bottom = 41.0
theme_override_font_sizes/font_size = 30
text = "示例插件"
vertical_alignment = 1

[node name="PluginID" type="Label" parent="HSplitContainer/TabContainer/PluginInfoPanel"]
offset_top = 51.0
offset_right = 672.0
offset_bottom = 82.0
theme_override_font_sizes/font_size = 20
text = "插件ID: example_plugin"

[node name="PluginAuthor" type="Label" parent="HSplitContainer/TabContainer/PluginInfoPanel"]
offset_top = 92.0
offset_right = 672.0
offset_bottom = 123.0
theme_override_font_sizes/font_size = 20
text = "作者: Xwdit"

[node name="PluginVersion" type="Label" parent="HSplitContainer/TabContainer/PluginInfoPanel"]
offset_top = 133.0
offset_right = 672.0
offset_bottom = 164.0
theme_override_font_sizes/font_size = 20
text = "版本: 1.0"

[node name="PluginDependency" type="Label" parent="HSplitContainer/TabContainer/PluginInfoPanel"]
offset_top = 174.0
offset_right = 672.0
offset_bottom = 205.0
theme_override_font_sizes/font_size = 20
text = "依赖的插件: 无"

[node name="PluginDescription" type="Label" parent="HSplitContainer/TabContainer/PluginInfoPanel"]
offset_top = 215.0
offset_right = 672.0
offset_bottom = 246.0
theme_override_font_sizes/font_size = 20
text = "描述: 这是一个示例插件，实际上并没有什么作用....."

[node name="PluginManagerPreview" parent="HSplitContainer/TabContainer/PluginInfoPanel" instance=ExtResource("2_hev7f")]
offset_top = 256.0
offset_right = 672.0
offset_bottom = 510.0

[node name="HBoxContainer" type="HBoxContainer" parent="HSplitContainer/TabContainer/PluginInfoPanel"]
offset_top = 520.0
offset_right = 672.0
offset_bottom = 550.0
alignment = 1

[node name="EditButton" type="Button" parent="HSplitContainer/TabContainer/PluginInfoPanel/HBoxContainer"]
offset_right = 165.0
offset_bottom = 30.0
size_flags_horizontal = 3
text = "编辑"

[node name="ReloadButton" type="Button" parent="HSplitContainer/TabContainer/PluginInfoPanel/HBoxContainer"]
offset_left = 169.0
offset_right = 334.0
offset_bottom = 30.0
size_flags_horizontal = 3
text = "重新加载"

[node name="UnloadButton" type="Button" parent="HSplitContainer/TabContainer/PluginInfoPanel/HBoxContainer"]
offset_left = 338.0
offset_right = 503.0
offset_bottom = 30.0
size_flags_horizontal = 3
text = "卸载"

[node name="DeleteButton" type="Button" parent="HSplitContainer/TabContainer/PluginInfoPanel/HBoxContainer"]
offset_left = 507.0
offset_right = 672.0
offset_bottom = 30.0
size_flags_horizontal = 3
text = "删除文件"

[node name="PluginRegisterPanel" type="VBoxContainer" parent="HSplitContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 30.0
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="HSplitContainer/TabContainer/PluginRegisterPanel"]
offset_right = 672.0
offset_bottom = 400.0
size_flags_vertical = 3
alignment = 1

[node name="EventList" type="VBoxContainer" parent="HSplitContainer/TabContainer/PluginRegisterPanel/HBoxContainer"]
offset_right = 221.0
offset_bottom = 400.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="Label" parent="HSplitContainer/TabContainer/PluginRegisterPanel/HBoxContainer/EventList"]
offset_right = 221.0
offset_bottom = 27.0
text = "事件列表"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemList" type="ItemList" parent="HSplitContainer/TabContainer/PluginRegisterPanel/HBoxContainer/EventList"]
offset_top = 31.0
offset_right = 221.0
offset_bottom = 400.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="KeywordList" type="VBoxContainer" parent="HSplitContainer/TabContainer/PluginRegisterPanel/HBoxContainer"]
offset_left = 225.0
offset_right = 446.0
offset_bottom = 400.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="Label" parent="HSplitContainer/TabContainer/PluginRegisterPanel/HBoxContainer/KeywordList"]
offset_right = 221.0
offset_bottom = 27.0
text = "关键词列表"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemList" type="ItemList" parent="HSplitContainer/TabContainer/PluginRegisterPanel/HBoxContainer/KeywordList"]
offset_top = 31.0
offset_right = 221.0
offset_bottom = 400.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CommandList" type="VBoxContainer" parent="HSplitContainer/TabContainer/PluginRegisterPanel/HBoxContainer"]
offset_left = 450.0
offset_right = 672.0
offset_bottom = 400.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="Label" parent="HSplitContainer/TabContainer/PluginRegisterPanel/HBoxContainer/CommandList"]
offset_right = 222.0
offset_bottom = 27.0
text = "控制台命令列表"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemList" type="ItemList" parent="HSplitContainer/TabContainer/PluginRegisterPanel/HBoxContainer/CommandList"]
offset_top = 31.0
offset_right = 222.0
offset_bottom = 400.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Infos" type="RichTextLabel" parent="HSplitContainer/TabContainer/PluginRegisterPanel"]
custom_minimum_size = Vector2(0, 100)
offset_top = 410.0
offset_right = 672.0
offset_bottom = 510.0
size_flags_horizontal = 3
threaded = true

[node name="RefreshButton" type="Button" parent="HSplitContainer/TabContainer/PluginRegisterPanel"]
offset_top = 520.0
offset_right = 672.0
offset_bottom = 550.0
text = "刷新注册列表"

[node name="PluginDataPanel" type="VBoxContainer" parent="HSplitContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 30.0
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="HSplitContainer/TabContainer/PluginDataPanel"]
offset_right = 672.0
offset_bottom = 360.0
size_flags_vertical = 3
alignment = 1

[node name="DataList" type="VBoxContainer" parent="HSplitContainer/TabContainer/PluginDataPanel/HBoxContainer"]
offset_right = 221.0
offset_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="Label" parent="HSplitContainer/TabContainer/PluginDataPanel/HBoxContainer/DataList"]
offset_right = 221.0
offset_bottom = 27.0
text = "数据库项目列表"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemList" type="ItemList" parent="HSplitContainer/TabContainer/PluginDataPanel/HBoxContainer/DataList"]
offset_top = 31.0
offset_right = 221.0
offset_bottom = 292.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AllClearButton" type="Button" parent="HSplitContainer/TabContainer/PluginDataPanel/HBoxContainer/DataList"]
offset_top = 296.0
offset_right = 221.0
offset_bottom = 326.0
text = "清空所有数据"

[node name="OpenDirButton" type="Button" parent="HSplitContainer/TabContainer/PluginDataPanel/HBoxContainer/DataList"]
offset_top = 330.0
offset_right = 221.0
offset_bottom = 360.0
text = "打开数据目录"

[node name="CacheList" type="VBoxContainer" parent="HSplitContainer/TabContainer/PluginDataPanel/HBoxContainer"]
offset_left = 225.0
offset_right = 446.0
offset_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="Label" parent="HSplitContainer/TabContainer/PluginDataPanel/HBoxContainer/CacheList"]
offset_right = 221.0
offset_bottom = 27.0
text = "缓存项目列表"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemList" type="ItemList" parent="HSplitContainer/TabContainer/PluginDataPanel/HBoxContainer/CacheList"]
offset_top = 31.0
offset_right = 221.0
offset_bottom = 292.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AllClearButton" type="Button" parent="HSplitContainer/TabContainer/PluginDataPanel/HBoxContainer/CacheList"]
offset_top = 296.0
offset_right = 221.0
offset_bottom = 326.0
text = "清空所有缓存"

[node name="OpenDirButton" type="Button" parent="HSplitContainer/TabContainer/PluginDataPanel/HBoxContainer/CacheList"]
offset_top = 330.0
offset_right = 221.0
offset_bottom = 360.0
text = "打开缓存目录"

[node name="ConfigList" type="VBoxContainer" parent="HSplitContainer/TabContainer/PluginDataPanel/HBoxContainer"]
offset_left = 450.0
offset_right = 672.0
offset_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="Label" parent="HSplitContainer/TabContainer/PluginDataPanel/HBoxContainer/ConfigList"]
offset_right = 222.0
offset_bottom = 27.0
text = "配置项目列表"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemList" type="ItemList" parent="HSplitContainer/TabContainer/PluginDataPanel/HBoxContainer/ConfigList"]
offset_top = 31.0
offset_right = 222.0
offset_bottom = 292.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AllClearButton" type="Button" parent="HSplitContainer/TabContainer/PluginDataPanel/HBoxContainer/ConfigList"]
offset_top = 296.0
offset_right = 222.0
offset_bottom = 326.0
text = "还原所有配置"

[node name="OpenDirButton" type="Button" parent="HSplitContainer/TabContainer/PluginDataPanel/HBoxContainer/ConfigList"]
offset_top = 330.0
offset_right = 222.0
offset_bottom = 360.0
text = "打开配置目录"

[node name="Infos" type="RichTextLabel" parent="HSplitContainer/TabContainer/PluginDataPanel"]
custom_minimum_size = Vector2(0, 100)
offset_top = 370.0
offset_right = 672.0
offset_bottom = 470.0
size_flags_horizontal = 3
threaded = true

[node name="DeleteButton" type="Button" parent="HSplitContainer/TabContainer/PluginDataPanel"]
offset_top = 480.0
offset_right = 672.0
offset_bottom = 510.0
text = "删除选定项目"

[node name="RefreshButton" type="Button" parent="HSplitContainer/TabContainer/PluginDataPanel"]
offset_top = 520.0
offset_right = 672.0
offset_bottom = 550.0
text = "刷新数据列表"

[node name="NoSelectLabel" type="Label" parent="HSplitContainer"]
visible = false
offset_left = 332.0
offset_top = 274.0
offset_right = 1004.0
offset_bottom = 305.0
theme_override_font_sizes/font_size = 20
text = "还未选择任何文件，请选择一个文件来对其进行操作"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="button_down" from="HSplitContainer/PluginListContainer/RefreshButton" to="." method="_on_refresh_button_button_down"]
[connection signal="button_down" from="HSplitContainer/PluginListContainer/FolderButton" to="." method="_on_folder_button_button_down"]
[connection signal="item_selected" from="HSplitContainer/PluginListContainer/PluginList" to="." method="_on_plugin_list_item_selected"]
[connection signal="text_changed" from="HSplitContainer/PluginListContainer/CreatePlugin/CreatePluginFile" to="." method="_on_create_plugin_file_text_changed"]
[connection signal="button_down" from="HSplitContainer/PluginListContainer/CreatePlugin/CreatePluginButton" to="." method="_on_create_plugin_button_button_down"]
[connection signal="button_down" from="HSplitContainer/PluginListContainer/ReloadAllButton" to="." method="_on_reload_all_button_button_down"]
[connection signal="button_down" from="HSplitContainer/PluginListContainer/UnloadAllButton" to="." method="_on_unload_all_button_button_down"]
[connection signal="button_down" from="HSplitContainer/TabContainer/PluginInfoPanel/HBoxContainer/EditButton" to="." method="_on_edit_button_button_down"]
[connection signal="button_down" from="HSplitContainer/TabContainer/PluginInfoPanel/HBoxContainer/ReloadButton" to="." method="_on_reload_button_button_down"]
[connection signal="button_down" from="HSplitContainer/TabContainer/PluginInfoPanel/HBoxContainer/UnloadButton" to="." method="_on_unload_button_button_down"]
[connection signal="button_down" from="HSplitContainer/TabContainer/PluginInfoPanel/HBoxContainer/DeleteButton" to="." method="_on_delete_button_button_down"]
[connection signal="focus_exited" from="HSplitContainer/TabContainer/PluginRegisterPanel/HBoxContainer/EventList/ItemList" to="." method="_on_event_list_focus_exited"]
[connection signal="item_selected" from="HSplitContainer/TabContainer/PluginRegisterPanel/HBoxContainer/EventList/ItemList" to="." method="_on_event_list_item_selected"]
[connection signal="focus_exited" from="HSplitContainer/TabContainer/PluginRegisterPanel/HBoxContainer/KeywordList/ItemList" to="." method="_on_keyword_list_focus_exited"]
[connection signal="item_selected" from="HSplitContainer/TabContainer/PluginRegisterPanel/HBoxContainer/KeywordList/ItemList" to="." method="_on_keyword_list_item_selected"]
[connection signal="focus_exited" from="HSplitContainer/TabContainer/PluginRegisterPanel/HBoxContainer/CommandList/ItemList" to="." method="_on_command_list_focus_exited"]
[connection signal="item_selected" from="HSplitContainer/TabContainer/PluginRegisterPanel/HBoxContainer/CommandList/ItemList" to="." method="_on_command_list_item_selected"]
[connection signal="button_down" from="HSplitContainer/TabContainer/PluginRegisterPanel/RefreshButton" to="." method="_on_reg_refresh_button_button_down"]
[connection signal="focus_exited" from="HSplitContainer/TabContainer/PluginDataPanel/HBoxContainer/DataList/ItemList" to="." method="_on_data_list_focus_exited"]
[connection signal="item_selected" from="HSplitContainer/TabContainer/PluginDataPanel/HBoxContainer/DataList/ItemList" to="." method="_on_data_list_item_selected"]
[connection signal="button_down" from="HSplitContainer/TabContainer/PluginDataPanel/HBoxContainer/DataList/AllClearButton" to="." method="_on_data_all_clear_button_button_down"]
[connection signal="button_down" from="HSplitContainer/TabContainer/PluginDataPanel/HBoxContainer/DataList/OpenDirButton" to="." method="_on_data_open_dir_button_button_down"]
[connection signal="focus_exited" from="HSplitContainer/TabContainer/PluginDataPanel/HBoxContainer/CacheList/ItemList" to="." method="_on_cache_list_focus_exited"]
[connection signal="item_selected" from="HSplitContainer/TabContainer/PluginDataPanel/HBoxContainer/CacheList/ItemList" to="." method="_on_cache_list_item_selected"]
[connection signal="button_down" from="HSplitContainer/TabContainer/PluginDataPanel/HBoxContainer/CacheList/AllClearButton" to="." method="_on_cache_all_clear_button_button_down"]
[connection signal="button_down" from="HSplitContainer/TabContainer/PluginDataPanel/HBoxContainer/CacheList/OpenDirButton" to="." method="_on_cache_open_dir_button_button_down"]
[connection signal="focus_exited" from="HSplitContainer/TabContainer/PluginDataPanel/HBoxContainer/ConfigList/ItemList" to="." method="_on_config_list_focus_exited"]
[connection signal="item_selected" from="HSplitContainer/TabContainer/PluginDataPanel/HBoxContainer/ConfigList/ItemList" to="." method="_on_config_list_item_selected"]
[connection signal="button_down" from="HSplitContainer/TabContainer/PluginDataPanel/HBoxContainer/ConfigList/AllClearButton" to="." method="_on_config_all_clear_button_button_down"]
[connection signal="button_down" from="HSplitContainer/TabContainer/PluginDataPanel/HBoxContainer/ConfigList/OpenDirButton" to="." method="_on_config_open_dir_button_button_down"]
[connection signal="button_down" from="HSplitContainer/TabContainer/PluginDataPanel/DeleteButton" to="." method="_on_datas_delete_button_button_down"]
[connection signal="button_down" from="HSplitContainer/TabContainer/PluginDataPanel/RefreshButton" to="." method="_on_data_refresh_button_button_down"]
